2006-02-25  Sushma Rai  <rsushma@novell.com>

	* exchange-contacts.c (e_exchange_contacts_get_contacts): Freeing 
	folder array.

	* exchange-calendar.c (e_exchange_calendar_get_calendars): Similar.
	See #329251.

2006-02-18  Irene Huang <Irene.Huang@sun.com>

	Fixes bug #331635

	* exchange-account-setup.c: (org_gnome_exchange_settings):
	Add NULL as the last parameter in g_object_new to mark the
	the end of parameter list.

2006-02-10  Sushma Rai  <rsushma@novell.com>

	* exchange-contacts.c (e_exchange_contacts_pcontacts): Checking if the
	folder selected is GAL folder and in case of GAL folder, returning
	after checking for offline status.
	(e_exchange_contacts_check): Handling GAL folder also.
	Fixes #329623 #328571 and #329624

2006-02-10  Sushma Rai  <rsushma@novell.com>

	* exchange-contacts.c (e_exchange_contacts_commit): Freeing uri_text.
	See #329251.

2006-02-06  Sushma Rai  <rsushma@novell.com>

	* exchange-permissions-dialog.c (exchange_permissions_dialog_new): 
	Initializing nresults to zero and freeing E2kResult.

	* exchange-calendar.c (e_exchange_calendar_commit): Freeing authtype.

	* exchange-contacts.c (e_exchange_contacts_commit): Similar.
	See #329251.

2006-02-05  Karsten Bräckelmann  <guenther@rudersport.de>

	* exchange-user-dialog.c (e2k_user_dialog_construct): 
	Correcting "Addressbook" to properly read "Address Book".
	Fixes bug #326256.

2006-02-03  Sushma Rai  <rsushma@novell.com>

	* exchange-permissions-dialog.c (exchange_permissions_dialog_new): 
	Freeing E2kResult.

	* exchange-calendar.c (e_exchange_calendar_commit): Freeing authtype.

	* exchange-contacts.c (e_exchange_contacts_commit): similar. 
	See #329251.

2006-02-03  Sushma Rai  <rsushma@novell.com>

	* exchange-folder.c (org_gnome_exchange_folder_subscription): Moved
	discovering the shared folder, opening that folder and error handling
	out to create_folder_subscription_dialog().
	
	* exchange-folder-subscription.c (create_folder_subscription_dialog):